k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  selector:
    app: python-app
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
