k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-values
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app-service
            port:
              number: 80

      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
